@@ -7,7 +7,9 @@ common_ldflags = -module -avoid-version
 
 # Build and install the python module:
 pyexec_LTLIBRARIES = glom.la
-glom_la_LDFLAGS = $(common_ldflags) -export-symbols-regex initglom \
-                  $(GLOM_LIBS) $(PYTHON_LDFLAGS) -lutil
-glom_la_LIBADD = $(top_builddir)/glom/libglom/libglom.la
+glom_la_LDFLAGS = $(common_ldflags) -export-symbols-regex initglom
+
+glom_la_LIBADD = $(top_builddir)/glom/libglom/libglom.la \
+                 $(GLOM_LIBS) $(PYTHON_LDFLAGS) -lutil
+
 glom_la_SOURCES = py_glom_module.cc py_glom_module.h
